Bug 414647 - Grow / Shrink Selection only change the width of a selection
Summary: Grow / Shrink Selection only change the width of a selection
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 4.2.8
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords: regression
: 418023 418343 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-29 03:53 UTC by Tyson Tan
Modified: 2020-03-22 00:22 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2019-11-29 03:53:13 UTC
In Krita 4.2.8, it was reported to me that the Grow / Shrink Selection functions appear to be broken. They can only change the width of a selection. It's happening with both the Selection Tools and Fill Tool.

Selection Tools: 
Right click menu -> Transform -> Grow Selection / Shrink Selectoion

Fill tool:
Tool Options -> Grow selection slider

I can confirm this by:
1) Make a small circular selection
2) Grow the selection
3) It's now a oval selection
Comment 1 Raghavendra kamath 2019-11-30 15:11:54 UTC
I can confirm this on recent version built from the git master. Setting the status of the bug report to "confirmed"
Comment 2 Tiar 2019-12-02 19:20:38 UTC
Git commit b49d97897559691c98e692f0a9e6309e721b301f by Agata Cacko.
Committed on 02/12/2019 at 18:24.
Pushed by tymond into branch 'master'.

Fix Grow Selection expanding in one direction

Before this commit there was a mistake in calculating
the border of the selection. It was caused by misreading
the original calculation equation while fixing the
CID issue (dividing by 0).
This commit fixes the behaviour by ensuring that
the value is being multiplied, not divided by sqrt.

M  +2    -2    libs/image/kis_selection_filters.cpp

https://invent.kde.org/kde/krita/commit/b49d97897559691c98e692f0a9e6309e721b301f
Comment 3 Tyson Tan 2019-12-03 00:27:45 UTC
Thank you, Tymond! :)
Comment 4 Tiar 2019-12-11 12:51:34 UTC
Git commit 0150c9518f1266893e6432770c18c32b687f33e9 by Agata Cacko.
Committed on 11/12/2019 at 12:48.
Pushed by tymond into branch 'krita/4.2'.

Fix Grow Selection expanding in one direction

Before this commit there was a mistake in calculating
the border of the selection. It was caused by misreading
the original calculation equation while fixing the
CID issue (dividing by 0).
This commit fixes the behaviour by ensuring that
the value is being multiplied, not divided by sqrt.

M  +2    -2    libs/image/kis_selection_filters.cpp

https://invent.kde.org/kde/krita/commit/0150c9518f1266893e6432770c18c32b687f33e9
Comment 5 Tiar 2020-02-22 09:11:35 UTC
*** Bug 418023 has been marked as a duplicate of this bug. ***
Comment 6 Rebecca Breu 2020-03-01 09:45:59 UTC
*** Bug 418343 has been marked as a duplicate of this bug. ***
Comment 7 Jacob Easterday 2020-03-22 00:05:37 UTC
Krita 4.2.8 Selection Tool Grow/Shrink Selection only changes width when used. Bug also occurs in Fill Tool when used inside a selection when Grow Selection is a non-zero value.

To Reproduce-
1. Make square selection
2. use Grow or Shrink Selection
3. Selection is now non-square with width changed.
Comment 8 Tiar 2020-03-22 00:22:29 UTC
@Jacob Easterday Please read the details of the bug report before reopening. If a bug gets fixed, the fix will be available for users in the next version after the fix is introduced (and sometimes one needs to wait even longer, for the major version, if the fix is too risky for the stable version). If the bug was reported for version 4.2.8, it means that the first version users can see it in will be 4.2.9.

In general after every fix you can download Krita Next version which will contain the fix. Often the fix is ported to the stable development version so it's available in Krita Plus, too. In this case it is in Krita Plus version for a long time.

Next Wednesday Krita 4.2.9 will be released with that fix. For now you can download Krita 4.2.9 beta, which is told to be very stable: https://krita.org/en/item/krita-4-2-9-beta-released/

Please if you find an issue, first ask on krita-artists.org what is the correct course of action.