Fix Grow Selection expanding in one direction

Before this commit there was a mistake in calculating
the border of the selection. It was caused by misreading
the original calculation equation while fixing the
CID issue (dividing by 0).
This commit fixes the behaviour by ensuring that
the value is being multiplied, not divided by sqrt.

BUG:414647